whoami-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: thundercats
  labels:
    app: whoami
spec:
  selector:
    matchLabels:
      app: whoami
  replicas: 2
  template:
    metadata:
      labels: 
        app: whoami
    spec:
      containers: 
      - name: whoami
        image: containous/whoami:v1.4.0
        ports: 
        - name: http
          containerPort: 80
