whoami-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: whoami
  namespace: thundercats
  labels:
    app: whoami
spec:
  type: ClusterIP
  selector: 
    app: whoami
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: http
